--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -24,9 +24,13 @@ jobs:
             arch: i686
             docker: linux/386
             build: "manylinux_"
-          - os: ubuntu-latest
+          - os: ubuntu-24.04-arm
             arch: aarch64
             docker: linux/arm64/v8
+            build: "manylinux_"
+          - os: ubuntu-24.04-arm
+            arch: armv7l
+            docker: linux/arm/v7
             build: "manylinux_"
           - os: ubuntu-latest
             arch: s390x
@@ -44,9 +48,13 @@ jobs:
             arch: i686
             docker: linux/386
             build: "musllinux_"
-          - os: ubuntu-latest
+          - os: ubuntu-24.04-arm
             arch: aarch64
             docker: linux/arm64/v8
+            build: "musllinux_"
+          - os: ubuntu-24.04-arm
+            arch: armv7l
+            docker: linux/arm/v7
             build: "musllinux_"
           - os: ubuntu-latest
             arch: s390x
@@ -121,12 +129,6 @@ jobs:
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
-      if: ${{ matrix.platform.arch == 'aarch64' }}
-      with:
-        platforms: arm64
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
       if: ${{ matrix.platform.arch == 's390x' }}
       with:
         platforms: s390x
@@ -143,7 +145,7 @@ jobs:
         python-version: '3.x'
 
     - name: Install cibuildwheel
-      run: python -m pip install cibuildwheel==2.21.3
+      run: python -m pip install cibuildwheel>=2.22.0
 
     - name: Build wheels
       run: python -m cibuildwheel --output-dir wheelhouse
@@ -173,12 +175,6 @@ jobs:
       with:
         name: wheel-${{ matrix.python.cibw }}-${{ runner.os }}-${{ matrix.platform.arch }}-${{ matrix.platform.build }}
         path: dist
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-      if: ${{ matrix.platform.arch == 'aarch64' }}
-      with:
-        platforms: arm64
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
